cleanup and preparation for multiple samples

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 bin_PROGRAMS=igni-samples
-igni_samples_SOURCES=main.c load-model.c
+igni_samples_SOURCES=main.c cmd/cmdline.c  load_model.c
 nobase_dist_pkgdata_DATA=mesh.obj mesh.mtl texture.png
 
