--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 
 m4_define([MAJOR_V], [0])
 m4_define([MINOR_V], [2])
-m4_define([PATCH_V], [1])
+m4_define([PATCH_V], [2])
 
 AC_INIT([igni-samples], MAJOR_V.MINOR_V.PATCH_V)
 CFLAGS="$CFLAGS -DMAJ_V="MAJOR_V" -DMIN_V="MINOR_V" -DPATCH_V="PATCH_V
@@ -10,6 +10,7 @@ AC_PREFIX_DEFAULT(/usr)
 AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
 
 AC_CHECK_LIB([sup], [sup_config], [], AC_MSG_ERROR([libsup not found!]))
+AC_CHECK_LIB([cqp], [cqp_cast_point], [], AC_MSG_ERROR([libcqp not found!]))
 
 AC_PROG_CC
 
