New sample: CQP Cast

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 bin_PROGRAMS=igni-samples
-igni_samples_SOURCES=main.c cmd/cmdline.c  load_model.c hitbox.c
+igni_samples_SOURCES=main.c cmd/cmdline.c cqp_cast.c load_model.c hitbox.c
 nobase_dist_pkgdata_DATA=mesh.obj mesh.mtl texture.png
 
